return 4 of 4 destinations

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 #cancun, #japan, #lakeoswego, #lasvegas, #newyork, #paris, #roadtrip, #seattle, #staycation {
   display: none;
 }
+
+.jumbotron {
+  text-align: center;
+}
